project(src-c C)

find_path(LAPACKE_HEADER NAMES lapacke.h PATHS /usr/include /usr/include/lapacke)
set(CMAKE_C_FLAGS "-g -Wall -O3 -I${LAPACKE_HEADER}")
find_library(LAPACKE_LIBRARY NAMES lapacke)
include_directories(../lib)

add_executable(test_array_1_c test_array_1.c lin_array.c common_array.c)
add_executable(test_pointer_1_c test_pointer_1.c lin_pointer.c common_array.c)
add_executable(test_lapack_1_c test_lapack_1.c)
target_link_libraries(test_lapack_1_c ${LAPACKE_LIBRARY} ${LAPACK_LIBRARIES})
add_executable(test_array_2_c test_array_2.c lin_array_complete.c common_array.c)
target_link_libraries(test_array_2_c m)
add_executable(test_pointer_2_c test_pointer_2.c lin_pointer_complete.c common_array.c)
target_link_libraries(test_pointer_2_c m)
add_executable(test_lapack_2_c test_lapack_2.c)
target_link_libraries(test_lapack_2_c dgetc2 ${LAPACKE_LIBRARY} ${LAPACK_LIBRARIES})
add_executable(test_array_rand_c test_array_rand.c lin_array.c common_array.c)
add_executable(test_pointer_rand_c test_pointer_rand.c lin_pointer.c common_array.c)

enable_testing()
add_test(NAME test_array_1_c COMMAND test_array_1_c)
add_test(NAME test_pointer_1_c COMMAND test_pointer_1_c)
add_test(NAME test_lapack_1_c COMMAND test_lapack_1_c)
add_test(NAME test_array_2_c COMMAND test_array_2_c)
add_test(NAME test_pointer_2_c COMMAND test_pointer_2_c)
add_test(NAME test_lapack_2_c COMMAND test_lapack_2_c)
add_test(NAME test_array_rand_c COMMAND test_array_rand_c)
add_test(NAME test_pointer_rand_c COMMAND test_pointer_rand_c)

add_subdirectory(qr)
