project(src-c C)
set(CMAKE_C_FLAGS "-g -Wall -O3")
set(CMAKE_EXE_LINKER_FLAGS "-lm")

enable_testing()

function(build_with_m TARGET)
  set(SOURCES ${ARGN})
  add_executable(${TARGET} ${SOURCES})
  target_link_libraries(${TARGET} m)
  add_test(NAME ${TARGET} COMMAND ${TARGET})
endfunction()

build_with_m(test_ahouse_1_c ../test_array_1.c lin_array_householder.c)
build_with_m(test_ahouse_2_c ../test_array_2.c lin_array_householder.c)
build_with_m(test_qr_1_c ../test_array_1.c lin_array_qr.c)
build_with_m(test_qr_2_c ../test_array_2.c lin_array_qr.c)
build_with_m(test_lq_1_c ../test_array_1.c lin_array_lq.c)
build_with_m(test_lq_2_c ../test_array_2.c lin_array_lq.c)
build_with_m(test_agivens_1_c ../test_array_1.c lin_array_givens.c)
build_with_m(test_agivens_2_c ../test_array_2.c lin_array_givens.c)

#add_test(NAME test_ahouse_1_c COMMAND test_ahouse_1_c)
#add_test(NAME test_qr_1_c COMMAND test_qr_1_c)
#add_test(NAME test_lq_1_c COMMAND test_lq_1_c)
#add_test(NAME test_agivens_1_c COMMAND test_agivens_1_c)
#add_test(NAME test_ahouse_2_c COMMAND test_ahouse_2_c)
#add_test(NAME test_qr_2_c COMMAND test_qr_2_c)
#add_test(NAME test_lq_2_c COMMAND test_lq_2_c)
#add_test(NAME test_agivens_2_c COMMAND test_agivens_2_c)
